# MCPSafety

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GITHUB_TROUBLESHOOTING.md  LICENSE.txt  Makefile  README.md  dev-requirements.txt  license_info.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  sqlc.yaml  test.py  update_web_search_tasks.py
chroma_db/: chroma.sqlite3
docs/: adding-mcp-servers.md  blender-setup.md  configuration-guide.md  custom-agent-guide.md  custom-evaluators-guide.md  system-architecture.md  technical-blog.md
log/: report_20250824_092004_c8ca6806-775a-4c75-9007-6ba694e94fe6.md  report_20250824_103102_ee8427ea-5401-498e-91de-3e2801fee557.md  report_20250824_104141_bafbad98-f0d1-4984-aaf2-37a2f5f36eb6.md  report_20250824_105436_6f9a4018-bd2a-4aec-a5a7-b83f46257595.md  report_20250824_110044_e3f47897-ebfd-47d1-81dc-d4dda5de8a4c.md  report_20250824_111220_d8e6441e-6928-48d9-8d1f-8a72e9e3be7a.md  report_20250824_111738_798e5c08-118d-4f91-9b5a-6e3d27f46a8a.md  report_20250824_112704_2facbc19-a91f-49e8-a122-c389adb5b244.md  report_20250824_113537_82a4be62-e7ee-4ae6-9aea-00d1d2a60c72.md  report_20250824_115023_592569c8-2681-4078-ad58-9041b292d92e.md  report_20250824_120133_692c51a9-e9de-4259-9a7a-cd107daa8c8d.md  report_20250824_121717_7c3b848d-6ffb-455e-bf62-0c530d22a022.md  report_20250824_135550_ab5a4f1e-c2d3-414f-902a-697eb25090f8.md  report_20250824_140241_6d6400d1-0516-4dc2-b7c7-fb7077893ace.md  report_20250824_144421_6d38f430-f4a4-4ccc-a49c-e61f8eb33988.md  report_20250824_161551_3c89efd7-9884-470e-86b1-7543e0e232d8.md  report_20250824_162519_dbcbd6b5-4e57-4084-b671-64dfcd64fd5c.md  report_20250824_163612_46e0e7d9-bb11-4b43-8848-17d8928f840f.md  report_20250824_164415_059fe8a8-5ed4-4553-8dd2-ea26c1d87a71.md  report_20250824_170947_b8a064b9-2d3a-499f-85a2-f64f858ca589.md  report_20250824_181427_1916b586-8131-4661-9d90-a62cf5927b93.md  report_20250824_182415_cbbd66c2-e5a1-4864-8c2f-816680758905.md  report_20250824_183800_62af36f2-066a-46d7-a6e3-c084342f40ed.md  report_20250824_184454_28e0e64d-d013-44ca-bdb2-416ee1876ad1.md  report_20250824_185333_61410b9c-71e8-4d31-af5e-52489e2ae5b7.md  report_20250824_190440_123329a7-5122-4411-919b-233956f668bc.md  report_20250824_193217_7b3fa045-4da4-4e2c-a341-6906507192ad.md  report_20250824_194927_7c81e686-030b-4154-bc1c-47af68971388.md  report_20250824_201005_9acf25f8-981d-415a-8ba0-fc09e2c48c9b.md  report_20250824_202240_c76b6b88-d243-49cb-81c4-37483b854799.md  report_20250824_204100_aa95b62d-2725-427f-bc4e-a5441f008b0b.md  report_20250824_204354_c6d467b9-2f02-47a8-aa6a-85a851fe97ac.md  report_20250824_205352_db0f9f29-03a5-4030-9951-d61ff6ebdbc9.md  (+8 more)
mcpuniverse/agent/: __init__.py  (+12 more)
(+834 files in other folders)
